# radar-return-statistics

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
claude_notes/: csarp_standard_vs_qlook_rssnr.md  greenland_processing.md
claude_plans/: 20260306-icechunk-js-visualization.md  20260306-s3-migration.md  20260412-ase-season-processing.md  20260506-multisystem-agasea-comparison.md
config/: config.yaml  config_crosssystem.yaml  config_greenland.yaml  test_config.yaml
docs/: architecture.md  data_access.md  processing.md  s3-setup.md  viewer.md
outputs/agasea_comparison/: matched_pairs.csv  summary.csv
scripts/analysis/: agasea_comparison.py  agasea_rssnr.py  crossovers.py  rssnr_scatter.py  season_crossovers.py
scripts/migrations/: backfill_collections_attr.py
src/radar_return_statistics/: __main__.py  collections.py  config.py  crossovers.py  processing.py  runner.py  store.py  visualize_frame.py  visualize_map.py
tests/: conftest.py  test_web_build.py
tests/integration/: conftest.py  test_opr_fetch.py  test_pipeline.py  test_regression.py
tests/unit/: test_config.py  test_processing.py  test_store.py
web/: index.html  package-lock.json  package.json
web/src/: colormap.ts  config.ts  histogram.ts  history.ts  main.ts  map.ts  store.ts  types.d.ts
